[project]
name = "zedcitychat"
version = "0.1.0"
description = ""
authors = [
    {name = "chee",email = "73396089+alcheeee@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
